initial attempt at creating a decent portfolio page

--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "@angular/router": "~8.2.11",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "@fortawesome/fontawesome-free": "5.10.2",
+    "bootstrap": "4.3.1",
+    "jquery": "3.4.1",
+    "jquery.easing": "^1.4.1",
+    "simple-line-icons": "^2.4.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.12",
